--- a/Code Practice/WEEK02- DAY01 - 31st DEC- SATURDAY/index.html
+++ b/Code Practice/WEEK02- DAY01 - 31st DEC- SATURDAY/index.html
@@ -7,7 +7,7 @@
     <title>WEEK02DAY01</title>
   </head>
   <body>
-    <div>not rendered</div>
-    <script src="./script.js"></script>
+    <div id="root">not rendered</div>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
