--- a/Code Practice/WEEK03- DAY02 - 8th JAN- SUNDAY/src/index.html
+++ b/Code Practice/WEEK03- DAY02 - 8th JAN- SUNDAY/src/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="max-w-6xl mx-auto" id="root"></div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
