--- a/Code Practice/WEEK04- DAY01 - 14th JAN- SATURDAY/src/index.html
+++ b/Code Practice/WEEK04- DAY01 - 14th JAN- SATURDAY/src/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root">not rendered</div>
-    <script type="module" src="./index.jsx"></script>
+    <div class="max-w-6xl mx-auto" id="root"></div>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
